Membership edit/show/index improvements and add waiver signed date

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -210,6 +210,15 @@ div {
   transition: 0.5s;
 }
 
+#setMaster {
+  margin: 0;
+  padding: 0;
+}
+
+.grays {
+  color: #999;
+}
+
 #error_explanation {
   width: 450px;
   border: 2px solid red;
