Add audit logging

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -65,7 +65,7 @@ div.actions input[type=submit] {
   font-weight: bold;
 }
 
-p, ol, ul {
+p, ol {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
