--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,15 @@
+$header-green: #006644;
+$secondary-header-green: #ccddcc;
+$button-dark-blue: #113377;
+$button-hover-blue: #225599;
+$light-gray: #ddd;
+$delete-dark-red: #771111;
+$delete-hover-red: #992222;
+
 body {
   background-color: #fff;
   color: #333;
-  font-family: verdana, arial, helvetica, sans-serif;
+  font-family: helvetica, arial, sans-serif;
   font-size: 13px;
   line-height: 18px;
   margin: 0;
@@ -14,21 +22,30 @@ html {
 }
 
 h1 {
-  background: #ddccdd;
+  background: $header-green;
+  color: #ddd;
   margin-top: 0;
   margin-bottom: 0;
   padding: 25px;
 }
 
-h1 a {
-  color: black;
+div.pageHeader {
+  border-bottom: 2px solid $header-green;
+  margin: 0;
+  padding: 0px 0px;
+  text-transform: uppercase;
+
+  h2 {
+    margin: 0;
+    padding: 0;
+    text-shadow: 3px 3px 0px #ddd;
+    font-size: 30px;
+  }
 }
 
-div.pageHeader {
-  background: #ccbbcc;
-  margin-top: 0;
-  margin-bottom: 10px;
-  padding: 15px 10px;
+div.loginInfo {
+  float: right;
+  padding-right: 20px;
 }
 
 h2 {
@@ -37,7 +54,7 @@ h2 {
 }
 
 div.bar {
-  background: #ccddcc;
+  background: $secondary-header-green;
   padding: 5px;
   margin-bottom: 10px;
   margin-top: 0;
@@ -49,10 +66,16 @@ div.body {
 }
 
 div.formDescription {
-  background: #bbccbb;
   margin: 0;
-  padding: 12px 10px;
+  padding: 10px 10px 6px 10px;
   font-style: italic;
+  border-bottom: 1px solid #ddd;
+  color: #888;
+}
+
+h3.formHeader {
+  font-size: 18px;
+  margin-bottom: -8px;
 }
 
 div.inlineField {
@@ -92,16 +115,20 @@ div {
   &.field, &.actions {
     font-family: verdana, arial, helvetica, sans-serif;
     font-size: 13px;
-    margin-top: 5px;
+    margin-top: 8px;
   }
 }
 
 .memberInfoBlock {
   background: #ddeedd;
-  line-height: 1.8;
+  line-height: 1.4;
   border: 1px solid #bbccbb;
   padding: 10px;
   padding-top: 5px;
+
+  .button {
+    font-size: 12px;
+  }
 }
 
 .modal {
@@ -135,16 +162,53 @@ div {
   font-weight: bold;
 }
 
-#playerStatusModalOpener, #setStatusModalOpener {
+.button {
   padding: 5px;
-  background: darkblue;
+  background: $button-dark-blue;
   color: white;
   cursor: pointer;
-  border-radius: 10px;
-  box-shadow: 1px 1px 1px black;
+  border-radius: 3px;
+  box-shadow: 1px 1px 2px #999;
+  font-size: 14px;
+
+  &:hover {
+    background: $button-hover-blue;
+    text-decoration: none;
+    color: white;
+  }
 }
 
+.secondaryButton {
+  padding: 5px;
+  border: 1px solid $button-dark-blue;
+  color: $button-hover-blue;
+  cursor: pointer;
+  border-radius: 3px;
+  box-shadow: 1px 1px 2px #999;
+  font-size: 14px;
 
+  &:hover {
+    background: $light-gray;
+    text-decoration: none;
+    color: $button-hover-blue;
+  }
+}
+
+.deleteButton {
+  padding: 5px;
+  background: $delete-dark-red;
+  color: white;
+  cursor: pointer;
+  border-radius: 3px;
+  box-shadow: 1px 1px 2px #999;
+  font-size: 14px;
+
+  &:hover {
+    background: $delete-hover-red;
+    text-decoration: none;
+    color: white;
+  }
+}
 
 #notice {
   color: green;
@@ -195,21 +259,6 @@ div {
   }
 }
 
-.buttonlike {
-  padding: 8px;
-  background: darkgreen;
-  color: white;
-  border-radius: 5px;
-  transition: 0.5s;
-  text-decoration: none;
-}
-
-.buttonlike:hover {
-  background: green;
-  color: white;
-  transition: 0.5s;
-}
-
 #setMaster {
   margin: 0;
   padding: 0;
@@ -219,12 +268,17 @@ div {
   color: #999;
 }
 
+.dataTable tr:hover {
+  background: $light-gray;
+}
+
 #error_explanation {
   width: 450px;
   border: 2px solid red;
   padding: 7px;
   padding-bottom: 0;
-  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   background-color: #f0f0f0;
 
   h2 {
