--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,13 +9,20 @@
   </head>
 
   <body>
-    <h1><%= link_to 'Civic Symphony Association of SF Membership Management System', root_path %></h1>
+    <h1>CSASF <b>Membership Management System</b></h1>
     <div class='bar'>
-      <%= link_to 'Home Page', root_path %> &middot;
       <% if user_signed_in? %>
-        Logged in as <%= current_user.email %> &middot;
-        <%= link_to "Change Password", edit_user_registration_path %> &middot;
-        <%= link_to "Log Out", destroy_user_session_path, :method => :delete %>
+        <div class='loginInfo'>
+          Logged in as <%= current_user.email %> &emsp; &middot; &emsp;
+          <%= link_to "Change Password", edit_user_registration_path %> &emsp; &middot; &emsp;
+          <b><%= link_to "Log Out", destroy_user_session_path, :method => :delete %></b>
+        </div>
+      <% end %>
+      <b><%= link_to 'Home Page', root_path %></b> &emsp; &middot; &emsp;
+      <% if user_signed_in? %>
+        <b><%= link_to 'Membership Roster', members_path %></b>
+
+
       <% else %>
         Not logged in. <%= link_to "Log In", new_user_session_path %>
       <% end %>
