--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -3,5 +3,5 @@
 <%= render 'form', member: @member %>
 
 <br>
-<%= link_to 'Cancel', members_path %><br><br>
-<%= link_to 'Delete this member', @member, method: :delete, data: { confirm: 'Are you sure you want to delete this member?' } %>
+<%= link_to 'Cancel', members_path, class: 'secondaryButton' %><br><br>
+<%= link_to 'Delete this member', @member, class: 'deleteButton', method: :delete, data: { confirm: 'Are you sure you want to delete this member?' } %>
