--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -1,3 +1,7 @@
+<% if flash[:notice] %>
+  <div class="notice"><%= flash[:notice] %></div>
+<% end %>
+
 <div class='pageHeader'><i><%= link_to '< Back to All Members', members_path %></i><br><br><h2>Editing <%= @member.first_name + " " + @member.last_name %>'s Membership</h2></div>
 
 <%= render 'form', member: @member %>
