--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,12 +1,20 @@
-<%= stylesheet_link_tag    '//cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css', media: 'all' %>
-<%= javascript_include_tag '//cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js' %>
 <script>
-$(document).ready(function() {
-    $('#members').DataTable();
-} );
+document.addEventListener('load', function() {
+  var datatable = new DataTable(document.getElementById('members'), {
+      pageSize: 3,
+      sort: [true, false, false, false],
+      filters: [true, false, false, false]
+  });
+
+  datatable.loadPage(1);
+  var data = datatable.all();
+  datatable.deleteAll(function (e) {
+      return e.title.trim().length > 0;
+  });
+});
 </script>
 
-<div class='pageHeader'><h2>Members</h2> &emsp; <%= link_to 'Add New Member', new_member_path, class: 'button' %> &emsp; <%= select_tag "instrument_filter", options_for_select(@instruments) %></div>
+<div class='pageHeader'><h2>Membership Roster</h2> &emsp; <%= link_to 'Add New Member', new_member_path, class: 'button' %></div>
 
 <table id="members">
   <thead>
@@ -20,7 +28,7 @@ $(document).ready(function() {
   <tbody>
     <% @members.each do |member| %>
       <% inst_list = member.member_instruments.map(&:instrument) %>
-      <% inst_stuff = inst_list.map { |il| link_to(il, members_url(:instrument=>il)) }.join(" ") %>
+      <% inst_stuff = inst_list.map { |il| link_to(il.capitalize, members_url(:instrument=>il)) }.join(", ") %>
       <tr>
         <td><%= link_to "#{member.first_name} #{member.last_name}", member %></td>
         <td><%= inst_stuff.html_safe %></td>
