--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -12,11 +12,11 @@
               @member.zip.present? %>
 
           <%= @member.address_1 %><br>
-          <% if @member.address_2 %>
+          <%= @member.address_2 %>
+          <% if @member.address_2.present? %>
             <br>
           <% end %>
-          <%= @member.address_2 %>
-          <%= @member.city.strip %>, <%= @member.state %> <%= @member.zip %>
+          <%= @member.city %>, <%= @member.state %> <%= @member.zip %>
         <% else %>
           No Valid Address Available
         <% end %>
@@ -34,7 +34,7 @@
         <% else %>
           No Phone Numbers Available
         <% end %>
-      <br>
+      <br><br>
         <strong>Email:</strong><br>
         <% if @member.email_1.present? || @member.email_2.present? %>
           <%= @member.email_1 %><br>
@@ -42,7 +42,7 @@
         <% else %>
           No Email Addresses Available
         <% end %>
-      <br>
+      <br><br>
         <strong>Emergency Contact:</strong><br>
         <% if @member.emergency_name.present? && @member.emergency_phone.present? %>
           <%= @member.emergency_name %>
@@ -60,12 +60,20 @@
         <%= @member.waiver_signed %><br>
         <strong>Initial Contact Date:</strong>
         <%= @member.initial_date %>
+      <br><br>
+        <strong>Instruments:</strong>
+        <%= @member.member_instruments.map(&:instrument).join(', ') %>
       </p>
     </td>
     <td valign=top>
       <br>
-      <h2>Performance Sets</h2><br><br>
+      <h2>Performance Sets</h2>
+      <% if @member.member_sets.length == 0 %>
+        <br><br>
+        <i>Has not played in any performance sets</i>
+      <% end %>
       <% @member.member_sets.sort_by { |v| v.performance_set.start_date }.reverse.each do |ms| %>
+        <br><br>
         <b><%= ms.performance_set.name %></b>&emsp;
         <span class='grays'>(<%= ms.performance_set.start_date.to_datetime.strftime('%B %e, %Y') %> – <%= ms.performance_set.end_date.to_datetime.strftime('%B %e, %Y')  %>)</span><br>
         <i><%= ms.set_status %></i><br>
@@ -74,12 +82,13 @@
         <% else %>
           Not rotating
         <% end %>
-        <br><%= ms.set_member_instruments[0].member_instrument.instrument.capitalize %><br><br>
+        <br><%= ms.set_member_instruments[0].member_instrument.instrument.capitalize %>
       <% end %>
 
+      <br><br>
       <h2>Audit Logs</h2>
         <ul>
-        <% @audit_string.each_with_index do |member_audit, i| %>
+        <% @audit_string && @audit_string.each_with_index do |member_audit, i| %>
           <li><%= @audit_string[i].html_safe %><br><br>
         <% end %>
       </ul>
