--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -85,6 +85,13 @@ div.formDescription {
   color: #888;
 }
 
+div.listDescription {
+  margin: 0;
+  padding: 10px 10px 6px 10px;
+  border-bottom: 1px solid #ddd;
+  color: #666;
+}
+
 h3.formHeader {
   font-size: 18px;
   margin-bottom: -8px;
@@ -169,8 +176,7 @@ div {
 .modal .closeHelp {
   display: inline-block;
   margin-left: 25px;
-  color: gray;
-  font-size: 16px;
+  font-size: 22px;
   font-weight: bold;
 }
 
@@ -232,6 +238,153 @@ div {
   color: green;
 }
 
+#members th {
+  background: #ddd;
+  border-bottom: 2px solid #999;
+  padding: 10px;
+}
+
+#members td {
+  padding: 10px;
+}
+
+#members tbody tr {
+  &:hover {
+    background: #ccc;
+    box-shadow: 0 -2px 0 #000 inset;
+
+    .arrow {
+      visibility: visible;
+    }
+  }
+}
+
+#members .arrow {
+  visibility: hidden;
+}
+
+#members tr:nth-child(even) {
+  background: #ddd;
+}
+
+.member-set-pill {
+  padding: 3px;
+  border: 1px solid #ccc;
+  margin-right: 3px;
+  border-radius: 5px;
+  box-shadow: 1px 1px 1px #ccc;
+  display: inline-block;
+
+  &.interested {
+    &::before {
+      content: "?";
+      font-weight: bold;
+      font-size: 17px;
+      display: inline-block;
+      margin-bottom: -3px;
+      vertical-align: top;
+    }
+    background: lightblue;
+  }
+
+  &.playing {
+    &::before {
+      content: "✓";
+      font-weight: bold;
+      font-size: 17px;
+      display: inline-block;
+      margin-bottom: -3px;
+      vertical-align: top;
+    }
+    background: lightgreen;
+  }
+
+  &.not-playing-own {
+    &::before {
+      content: "✗";
+      font-weight: bold;
+      font-size: 17px;
+      display: inline-block;
+      margin-bottom: -3px;
+      vertical-align: top;
+    }
+    background: lightyellow;
+  }
+
+  &.not-playing-not-own {
+    &::before {
+      content: "⛔";
+      font-weight: bold;
+      font-size: 17px;
+      display: inline-block;
+      margin-bottom: -3px;
+      vertical-align: top;
+    }
+    background: #ffa879;
+  }
+
+  &.subbing {
+    &::before {
+      content: "🙋";
+      font-weight: bold;
+      font-size: 17px;
+      display: inline-block;
+      margin-bottom: -3px;
+      vertical-align: top;
+    }
+    background: #ead8f3;
+  }
+
+  &.not-interested {
+    &::before {
+      content: "X";
+      font-weight: bold;
+      font-size: 17px;
+      display: inline-block;
+      margin-bottom: -3px;
+      vertical-align: top;
+    }
+    background: lightgray;
+  }
+
+  &.rotating {
+    &::after {
+      background: red;
+      color: white;
+      content: "\00a0R\00a0";
+      font-weight: bold;
+      font-size: 17px;
+      display: inline-block;
+      margin-bottom: -3px;
+      vertical-align: top;
+    }
+  }
+
+  &:hover .member-set-pill-tooltip {
+    display: block;
+  }
+}
+
+.member-set-pill-tooltip {
+  display: none;
+  position: absolute;
+  width: 400px;
+  height: 80px;
+  background: white;
+  box-shadow: 2px 2px 2px black;
+  border: 1px solid black;
+  padding: 8px;
+  margin-top: 6px;
+  margin-left: 10px;
+}
+
+.nowaiver {
+  background: red;
+  color: white;
+  padding: 2px;
+  font-weight: bold;
+}
+
 .errZone {
   display: none;
   border: 3px solid red;
@@ -259,6 +412,10 @@ div {
 
 .hideInstruments {
   display: none;
+}
+
+.savedInstrument {
+  color: black;
 }
 
 .removeLink {
