Fix tests for absences.

--- a/app/views/absences/_form.html.erb
+++ b/app/views/absences/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :performanceset_id %>
-    <%= f.text_field :performanceset_id %>
+    <%= f.label :performance_set_id %>
+    <%= f.text_field :performance_set_id %>
   </div>
 
   <div class="field">
