--- a/app/views/absences/index.html.erb
+++ b/app/views/absences/index.html.erb
@@ -16,7 +16,7 @@
     <% @absences.each do |absence| %>
       <tr>
         <td><%= absence.member %></td>
-        <td><%= absence.performanceset %></td>
+        <td><%= absence.performance_set %></td>
         <td><%= absence.date %></td>
         <td><%= absence.planned %></td>
         <td><%= absence.sub_found %></td>
