--- a/app/views/absences/show.html.erb
+++ b/app/views/absences/show.html.erb
@@ -4,8 +4,8 @@
 </p>
 
 <p>
-  <strong>Performanceset:</strong>
-  <%= @absence.performanceset %>
+  <strong>Performance Set:</strong>
+  <%= @absence.performance_set %>
 </p>
 
 <p>
