Fix SetMemberInstrumentsController tests.

--- a/app/views/set_member_instruments/_form.html.erb
+++ b/app/views/set_member_instruments/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :set_id %>
-    <%= f.text_field :set_id %>
+    <%= f.label :member_set_id %>
+    <%= f.text_field :member_set_id %>
   </div>
 
   <div class="field">
