--- a/app/views/set_member_instruments/show.html.erb
+++ b/app/views/set_member_instruments/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Set:</strong>
-  <%= @set_member_instrument.set %>
+  <strong>Member Set:</strong>
+  <%= @set_member_instrument.member_set %>
 </p>
 
 <p>
