--- a/app/views/set_member_instruments/index.html.erb
+++ b/app/views/set_member_instruments/index.html.erb
@@ -12,7 +12,7 @@
   <tbody>
     <% @set_member_instruments.each do |set_member_instrument| %>
       <tr>
-        <td><%= set_member_instrument.set %></td>
+        <td><%= set_member_instrument.member_set %></td>
         <td><%= set_member_instrument.member_instrument %></td>
         <td><%= link_to 'Show', set_member_instrument %></td>
         <td><%= link_to 'Edit', edit_set_member_instrument_path(set_member_instrument) %></td>
