--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class='listDescription'>
   <%= select_tag :instruments, options_for_select(@instruments, selected: @instrument), id: 'instrumentSelector' %>
-  <%= select_tag :sets, options_for_select(@sets, selected: @set), id: 'setSelector' %>
+  <%= select_tag :sets, options_for_select(@performance_sets, selected: @performance_sets), id: 'setSelector' %>
   <br>
   <% if @set || @instrument %>
     <% if @set %>
