Missed a few @set locations

--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -4,8 +4,8 @@
   <%= select_tag :instruments, options_for_select(@instruments, selected: @instrument), id: 'instrumentSelector' %>
   <%= select_tag :sets, options_for_select(@performance_sets, selected: @performance_sets), id: 'setSelector' %>
   <br>
-  <% if @set || @instrument %>
-    <% if @set %>
+  <% if @performance_sets || @instrument %>
+    <% if @performance_sets %>
       <i>Showing only members playing in <b><%= PerformanceSet.find_by_id(params[:set]).name %></b></i>
     <% end %>
     <% if @instrument %>
