--- a/app/views/members/partials/_member_set_pill.html.erb
+++ b/app/views/members/partials/_member_set_pill.html.erb
@@ -1,7 +1,7 @@
 <%
 
    member_sets.map do |member_set|
-     if @set && member_set.performance_set.id.to_s != @set
+     if @performance_sets && member_set.performance_set.id.to_s != @performance_sets
        next
      end
 
